some tidying up

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -10,7 +10,7 @@
     <h1 class="my-header">Data for {{country.title()}}</h1>
     <div class="img-table-div">
         <div class="img-div">
-            <img class="my-img" alt="" src="..\static\images\{{country}}.png"/>
+            <img class="my-img" alt="" src="../static/images/{{country}}.png"/>
         </div>
         <div class="wrap">
             <div class="inner-table">
