--- a/webapp/templates/country.html
+++ b/webapp/templates/country.html
@@ -13,7 +13,7 @@
             <img class="my-img" alt="" src="../static/images/{{country}}.png"/>
         </div>
         <div class="inner-table">
-            <table class="my-table" id="my-table">
+            <table class="my-table" id="my-table" aria-describedby="Table of countries with data available">
                 <thead class="my-table-header">
                 <tr>
                     <th id="table-header">Countries</th>
