new data, small changes everywhere

--- a/webapp/templates/country.html
+++ b/webapp/templates/country.html
@@ -22,7 +22,7 @@
                 {% for country in countries %}
                 <tr>
                     <td>
-                        <a href="/{{country}}">
+                        <a href="/dates/{{country}}">
                             <div style="width: 100%; height: 100%">
                                 {{country.title()}}
                             </div>
